...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/conversationToolbarTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="?nablaMessaging_conversationHeaderTitleAppearance"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:visibility="visible"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/conversationRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/conversationRecyclerBottomBarrier"
            app:layout_constraintEnd_toEndOf="parent"
...
                app:barrierDirection="top"
                app:constraint_referenced_ids="conversationTextInputLayoutContainer, conversationRecordingVoiceProgress"
                />


            <ImageView
                android:id="@+id/conversationAddMediaButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/nabla_circle_ripple_background"
                android:contentDescription="@string/nabla_conversation_composer_add_attachment_content_description"
                app:layout_constraintBottom_toBottomOf="@id/guidelineControlsBottom"
...
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="?nablaMessaging_addMediaIcon"
                />

            <ImageView
                android:id="@+id/conversationRecordVoiceButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="2dp"
                android:background="@drawable/nabla_circle_ripple_background"
                android:contentDescription="@string/nabla_conversation_button_record_audio_message_content_description"
...
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="?nablaMessaging_conversationComposerBackground"
                android:elevation="0.5dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
                app:layout_constraintEnd_toStartOf="@id/conversationSendButton"
                app:layout_constraintStart_toEndOf="@id/conversationRecordVoiceButton"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/conversationMediasToSendRecyclerView"
                    android:layout_width="match_parent"
...
                    android:paddingTop="10dp"
                    tools:itemCount="1"
                    tools:listitem="@layout/nabla_conversation_timeline_item_media_to_send"
                    />

                <EditText
                    android:id="@+id/conversationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?nablaMessaging_conversationComposerEditTextStyle"
                    android:background="@null"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textCapSentences"
...
