<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nabla_conversation_composer_placeholder_default">Type your message</string>

    <string name="nabla_conversation_list_view_unread_indicator_content_description">Unread messages</string>

    <string name="nabla_conversation_message_copy_label">Copied message</string>

    <string name="nabla_conversation_message_sending_status">Sending…</string>
    <string name="nabla_conversation_message_sent_status">Sent</string>
    <string name="nabla_conversation_message_error_status">Failed to send, tap to try again…</string>

    <string name="nabla_conversation_no_pdf_third_party_app_info_title">Install Google Drive to open the PDF?</string>
    <string name="nabla_conversation_no_pdf_third_party_app_info_message">No PDF reader was found on your phone, do you want to install Google Drive to open the PDF file?</string>
    <string name="nabla_conversation_no_pdf_third_party_app_info_positive">Install</string>
    <string name="nabla_conversation_no_pdf_third_party_app_info_negative">Cancel</string>

    <string name="nabla_error_message_conversations_loading_more">An error occurred while loading more conversations, please try again.</string>
    <string name="nabla_error_message_conversation_loading_more">An error occurred while loading more messages, please try again.</string>
    <string name="nabla_error_message_conversation_attachment_media_picker">An error occurred while opening media picker, please try again.</string>
    <string name="nabla_error_message_conversation_attachment_camera_capturing">An error occurred while capturing a photo, please try again.</string>
    <string name="nabla_error_message_conversation_attachment_camera_opening">An error occurred while opening the camera, please try again.</string>
    <string name="nabla_error_message_conversation_attachment_library_opening">An error occurred while opening the library, please try again.</string>
    <string name="nabla_error_message_conversation_link_opening">An error occurred while opening the link, please try again.</string>
    <string name="nabla_error_message_conversation_deleting_message">An error occurred while deleting the message, please try again.</string>
    <string name="nabla_error_message_conversation_clicked_url_parsing">An error occurred while processing the link, please try again.</string>

    <string name="nabla_conversation_message_action_reply">Reply</string>
    <string name="nabla_conversation_message_action_copy">Copy</string>
    <string name="nabla_conversation_message_action_delete">Delete</string>
    <string name="nabla_conversation_full_screen_media_close_content_description">Close</string>
    <string name="nabla_conversation_full_screen_media_share_content_description">Share</string>
    <string name="nabla_conversation_attachment_media_picker_camera_photo">Take a picture</string>
    <string name="nabla_conversation_attachment_media_picker_camera_video">Record a video</string>
    <string name="nabla_conversation_attachment_media_picker_photos_library">Photo &amp; video library</string>
    <string name="nabla_conversation_attachment_media_picker_documents">Files</string>
    <string name="nabla_conversation_attachment_media_picker_document_scanner">Scan Document</string>

    <string name="nabla_conversation_deleted_message_placeholder">Deleted message</string>
    <string name="nabla_conversation_file_message_content_description">File message</string>
    <string name="nabla_conversation_typing_indicator_content_description">is typing</string>
    <string name="nabla_conversation_message_author_unknown_title">Unrecognized sender</string>
    <string name="nabla_conversation_composer_remove_attachment_content_description">Remove media attachment</string>
    <string name="nabla_conversation_composer_add_attachment_content_description">Add media attachment</string>
    <string name="nabla_conversation_composer_send_content_description">Send</string>
    <string name="nabla_conversation_composer_cancel_reply_content_description">Cancel reply</string>
    <string name="nabla_conversation_composer_replying_to_title_author">Reply to %1$s</string>
    <string name="nabla_conversation_video_message_thumbnail_content_description">See the video</string>
    <string name="nabla_conversation_header_loading">Loading</string>
    <string name="nabla_conversation_header_error">Error</string>
    <string name="nabla_conversation_full_screen_image_sharing_chooser_title">Share</string>
    <string name="nabla_conversation_conversation_activity_provider_joined">%1$s joined the conversation</string>
    <string name="nabla_conversation_conversation_activity_deleted_provider_joined">A practitioner joined the conversation</string>

    <string name="nabla_conversation_audio_message_player_title">Voice message</string>
    <string name="nabla_conversation_audio_message_play_pause_content_description">Play/Pause</string>
    <string name="nabla_conversation_button_record_audio_message_content_description">Start voice message recording</string>
    <string name="nabla_conversation_button_cancel_audio_message_content_description">Cancel voice message recording</string>
    <string name="nabla_conversation_error_recording_voice_message">Something went wrong while recording voice message</string>
    <string name="nabla_conversation_voice_message_audio_permission_rational_title">Authorisation to use microphone</string>
    <string name="nabla_conversation_voice_message_audio_permission_rational_description">To record a voice message, we need your authorisation to use your microphone.</string>
    <string name="nabla_conversation_document_scan_failure">Failed to attach the scanned document.</string>

    <string name="nabla_conversation_replied_to_message_author_patient">You</string>
    <string name="nabla_conversation_replied_to_message_description_deleted">Deleted message</string>
    <string name="nabla_conversation_replied_to_message_description_voice">🔊 Voice message</string>
    <string name="nabla_conversation_replied_to_message_description_document">📁 Document</string>
    <string name="nabla_conversation_replied_to_message_description_photo">📷 Photo</string>
    <string name="nabla_conversation_replied_to_message_description_video">📹 Video</string>

    <string name="nabla_conversation_list_toolbar_title">Medical Chat</string>
    <string name="nabla_conversation_list_create_cta_text">Start a conversation</string>
    <string name="nabla_conversation_list_empty_state_text">No conversations</string>

    <string name="nabla_conversation_video_consultation">Video consultation</string>
    <string name="nabla_conversation_video_consultation_icon_content_description">Video call icon</string>
    <string name="nabla_conversation_video_consultation_join">Join the call</string>
    <string name="nabla_conversation_video_consultation_return_to_call">Return to call</string>
    <string name="nabla_conversation_video_consultation_ended">Ended</string>


</resources>
