<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatPatientMessageContentRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingBottom="8dp"
    android:paddingHorizontal="20dp"
    tools:background="?android:attr/colorBackground"
    >

    <FrameLayout
        android:id="@+id/chatPatientMessageContentContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/chatPatientMessageContentStatusTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="3dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textAppearance="?nablaMessaging_conversationMessageStatusAppearance"
        app:layout_constraintEnd_toEndOf="@+id/chatPatientMessageContentContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatPatientMessageContentContainer"
        tools:text="Message lu"
        />


</androidx.constraintlayout.widget.ConstraintLayout>