...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:progress="40"
        />

    <ImageView
        android:id="@+id/audioPlayPauseButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/nabla_audio_play_pause_button_background"
        android:contentDescription="@string/nabla_conversation_audio_message_play_pause_content_description"
        android:padding="6dp"
...

    <TextView
        android:id="@+id/audioMessageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBodyLarge"
        app:layout_constraintBottom_toTopOf="@id/audioMessageSecondsText"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/audioPlayPauseButton"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/nabla_conversation_audio_message_player_title"
        tools:textColor="@color/nabla_black"
...
